...
                                .padding(horizontal = 4.dp)
                        ) {
                            Text(
                                modifier = Modifier
                                    .align(Alignment.Center)
                                    .testTag(TEXT_NO_EXISTED_FINANCE_SCHEDULE),
                                text = "금융 일정이 존재하지 않습니다.",
                                color = Grey600,
                                style = UligaTheme.typography.body5,
                            )
                        }
                    }
                } else {
...
                                    shape = UligaTheme.shapes.medium
                                )
                                .padding(horizontal = 4.dp)
                        ) {
                            Text(
                                modifier = Modifier.align(Alignment.Center),
                                text = "고정 지출 정보가 존재하지 않습니다.",
                                color = Grey600,
                                style = UligaTheme.typography.body5,
                            )
                        }
                    }
                } else {
...
